--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "watch": "yarn run test --watch"
   },
   "jest": {
-    "collectCoverageFrom": ["lib/**/*.{ts,js}"],
-    "coverageReporters": ["text", "html"],
+    "collectCoverageFrom": [
+      "lib/**/*.{ts,js}"
+    ],
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
     "moduleNameMapper": {
       "^lib/(.*)$": "<rootDir>/lib/$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
@@ -100,6 +105,7 @@
     "react-hook-form": "^6.4.1",
     "react-i18next": "11.7.0",
     "react-jazzicon": "^0.1.3",
+    "react-markdown": "^5.0.3",
     "react-query": "^2.25.2",
     "react-query-devtools": "^2.6.1",
     "react-spinners": "^0.9.0",
