--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react-test-renderer": "16.13.1",
     "react-toastify": "^6.0.8",
     "react-wizard-primitive": "^2.4.0",
+    "remark-gfm": "^1.0.0",
     "request": "2.88.2",
     "rollup": "2.17.1",
     "scheduler": "^0.20.1",
