--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "author": "PoolTogether Inc.",
   "scripts": {
     "reinstall": "rm -rf ./node_modules && yarn",
-    "dev": "npm-run-all --parallel start:app start:server",
-    "start:app": "PORT=3000 node --max-old-space-size=8192 server.js",
-    "start:server": "netlify-lambda serve functions",
-    "postinstall": "netlify-lambda install",
+    "dev": "PORT=3000 node --max-old-space-size=8192 server.js",
     "build": "next build && next export && yarn postexport",
-    "dist": "yarn build && netlify-lambda build functions",
+    "dist": "yarn build",
     "export": "next export",
     "postexport": "node post-export.js",
     "start": "NODE_ENV=production PORT=80 node server.js",
@@ -41,7 +38,6 @@
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "jest": "^26.4.1",
-    "netlify-lambda": "^1.6.3",
     "nock": "^13.0.5",
     "npm-run-all": "^4.1.5"
   },
