--- a/.envrc.example
+++ b/.envrc.example
@@ -9,7 +9,7 @@ export NEXT_JS_PORTIS_API_KEY=
 
 export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_MAINNET=
 export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_ROPSTEN=
-export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_RINKEBY=
+export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_RINKEBY=https://api.thegraph.com/subgraphs/name/pooltogether/pooltogether-rinkeby-governance
 
 export NEXT_JS_DEFAULT_ETHEREUM_NETWORK_NAME=
 
