--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "watch": "yarn run test --watch"
   },
   "jest": {
-    "collectCoverageFrom": ["lib/**/*.{ts,js}"],
-    "coverageReporters": ["text", "html"],
+    "collectCoverageFrom": [
+      "lib/**/*.{ts,js}"
+    ],
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
     "moduleNameMapper": {
       "^lib/(.*)$": "<rootDir>/lib/$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
@@ -40,10 +45,10 @@
     "3box": "^1.21.0",
     "@argent/smartwallet-utils": "^0.0.11",
     "@pooltogether/bnc-onboard": "1.16.2-b",
-    "@pooltogether/current-pool-data": "3.1.0",
+    "@pooltogether/current-pool-data": "3.2.0-beta.2",
     "@pooltogether/etherplex": "^0.2.3",
     "@pooltogether/loot-box": "1.0.0",
-    "@pooltogether/pooltogether-contracts": "3.1.0-beta.7",
+    "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
     "@reach/dialog": "^0.10.5",
     "@reach/menu-button": "^0.10.5",
     "@reach/tooltip": "^0.10.5",
