--- a/.envrc.example
+++ b/.envrc.example
@@ -7,8 +7,10 @@ export NEXT_JS_FORTMATIC_API_KEY=
 export NEXT_JS_PORTIS_API_KEY=
 
 export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_MAINNET=
-export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_ROPSTEN=
 export NEXT_JS_GOVERNANCE_SUBGRAPH_URI_RINKEBY=https://api.thegraph.com/subgraphs/name/pooltogether/pooltogether-rinkeby-governance
+
+export NEXT_JS_SUBGRAPH_URI_MAINNET=https://api.thegraph.com/subgraphs/name/pooltogether/pooltogether-v3_1_0
+export NEXT_JS_SUBGRAPH_URI_RINKEBY=https://api.thegraph.com/subgraphs/name/pooltogether/rinkeby-v3_1_0
 
 export NEXT_JS_DEFAULT_ETHEREUM_NETWORK_NAME=
 
