--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "react-countup": "^4.3.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.4.1",
+    "react-hook-form": "6.15.1",
     "react-i18next": "11.7.0",
     "react-jazzicon": "^0.1.3",
     "react-markdown": "^5.0.3",
