fetching abi from etherscan works

--- a/.envrc.example
+++ b/.envrc.example
@@ -17,6 +17,8 @@ export NEXT_JS_DEFAULT_ETHEREUM_NETWORK_NAME=
 export NEXT_JS_INFURA_KEY=
 export NEXT_JS_DOMAIN_NAME=
 
+export NEXT_JS_ETHERSCAN_API_KEY=
+
 export MAGIC_SECRET_KEY=
 export NEXT_JS_MAGIC_PUB_KEY=
 
