--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-hook-form": "6.15.1",
     "react-i18next": "11.7.0",
     "react-jazzicon": "^0.1.3",
+    "react-loader-spinner": "^4.0.0",
     "react-markdown": "^5.0.3",
     "react-query": "^2.25.2",
     "react-query-devtools": "^2.6.1",
