--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "PoolTogether Inc.",
   "scripts": {
     "reinstall": "rm -rf ./node_modules && yarn",
-    "dev": "PORT=3000 node --max-old-space-size=8192 server.js",
+    "dev": "npm-run-all --parallel start:app start:server",
+    "start:app": "PORT=3000 node --max-old-space-size=8192 server.js",
+    "start:server": "netlify-lambda serve functions",
     "build": "next build && next export && yarn postexport",
     "dist": "yarn build",
     "export": "next export",
@@ -56,14 +58,6 @@
     "@sentry/cli": "^1.55.2",
     "@sentry/react": "^5.28.0",
     "@sentry/tracing": "^5.28.0",
-    "@vx/event": "^0.0.199",
-    "@vx/gradient": "^0.0.199",
-    "@vx/group": "^0.0.199",
-    "@vx/mock-data": "^0.0.199",
-    "@vx/responsive": "^0.0.199",
-    "@vx/scale": "^0.0.199",
-    "@vx/shape": "^0.0.199",
-    "@vx/tooltip": "^0.0.199",
     "add": "^2.0.6",
     "autoprefixer": "^9.8.6",
     "beautiful-react-hooks": "^0.28.0",
@@ -88,6 +82,7 @@
     "jotai": "^0.11.2",
     "js-cookie": "^2.2.1",
     "luxon": "^1.25.0",
+    "netlify-lambda": "1.6.3",
     "next": "10.1.3",
     "next-i18next": "^4.5.0",
     "next-images": "^1.4.1",
