* missed a build step

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "npm-run-all --parallel start:app start:server",
     "start:app": "PORT=3000 node --max-old-space-size=8192 server.js",
     "start:server": "netlify-lambda serve functions",
+    "postinstall": "netlify-lambda install",
     "build": "next build && next export && yarn postexport",
-    "dist": "yarn build",
+    "dist": "yarn build && netlify-lambda build functions",
     "export": "next export",
     "postexport": "node post-export.js",
     "start": "NODE_ENV=production PORT=80 node server.js",
