--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dist": "yarn build && netlify-lambda build functions",
     "export": "next export",
     "postexport": "node post-export.js",
+    "distrelease": "yarn test && yarn dist",
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
