--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
   "dependencies": {
     "3box": "^1.21.0",
     "@argent/smartwallet-utils": "^0.0.11",
-    "@pooltogether/bnc-onboard": "1.20.1",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@pooltogether/bnc-onboard": "1.20.2",
     "@pooltogether/current-pool-data": "3.2.0-beta.5",
-    "@pooltogether/etherplex": "^0.2.3",
+    "@pooltogether/etherplex": "^1.0.2",
     "@pooltogether/loot-box": "1.0.0",
     "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
     "@reach/dialog": "^0.10.5",
@@ -69,7 +70,7 @@
     "date-fns-tz": "^1.0.12",
     "email-validator": "^2.0.4",
     "eth-revert-reason": "^1.0.3",
-    "ethers": "^4.0.47",
+    "ethers": "^5.1.0",
     "fathom-client": "^3.0.0",
     "feather-icons-react": "^0.4.1",
     "framer-motion": "2.7.5",
