--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@argent/smartwallet-utils": "^0.0.11",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@pooltogether/bnc-onboard": "1.25.0-b",
-    "@pooltogether/current-pool-data": "3.2.0-beta.5",
+    "@pooltogether/current-pool-data": "3.4.12",
     "@pooltogether/etherplex": "^1.0.2",
     "@pooltogether/loot-box": "1.0.0",
     "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
@@ -109,6 +109,7 @@
     "react-table": "^7.5.0",
     "react-test-renderer": "16.13.1",
     "react-toastify": "^6.0.8",
+    "react-tooltip": "^4.2.19",
     "react-wizard-primitive": "^2.4.0",
     "remark-gfm": "^1.0.0",
     "request": "2.88.2",
