--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@pooltogether/bnc-onboard": "1.25.0-b",
     "@pooltogether/current-pool-data": "3.4.18",
     "@pooltogether/etherplex": "^1.0.2",
+    "@pooltogether/hooks": "^0.0.8",
     "@pooltogether/loot-box": "1.0.0",
     "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
     "@pooltogether/utilities": "0.0.15",
