--- a/.envrc.example
+++ b/.envrc.example
@@ -3,6 +3,7 @@
 export NEXT_JS_ENV=
 
 export NEXT_JS_FORTMATIC_API_KEY=
+export NEXT_JS_FORTMATIC_PRODUCTION_API_KEY=
 
 export NEXT_JS_PORTIS_API_KEY=
 
