--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "@pooltogether/bnc-onboard": "1.25.0-b",
     "@pooltogether/current-pool-data": "3.4.18",
     "@pooltogether/etherplex": "^1.0.2",
-    "@pooltogether/hooks": "^0.0.8",
+    "@pooltogether/hooks": "^0.0.15",
     "@pooltogether/loot-box": "1.0.0",
     "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
+    "@pooltogether/pooltogether-react-tailwind-ui": "^0.0.1",
     "@pooltogether/utilities": "0.0.15",
     "@reach/dialog": "^0.10.5",
     "@reach/menu-button": "^0.10.5",
@@ -89,7 +90,6 @@
     "luxon": "^1.25.0",
     "netlify-lambda": "1.6.3",
     "next": "10.1.3",
-    "next-i18next": "^4.5.0",
     "next-images": "^1.4.1",
     "postcss-easy-import": "^3.0.0",
     "query-string": "^6.13.1",
