--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
-    "watch": "yarn run test --watch"
+    "watch": "yarn run test --watch",
+    "link-hooks": "cd node_modules/react && yarn link && cd ../react-query && yarn link && cd ../react-dom && yarn link && cd ../jotai && yarn link && cd ../.. && yarn link @pooltogether/hooks",
+    "unlink-hooks": "cd node_modules/react && yarn unlink && cd ../react-query && yarn unlink && cd ../react-dom && yarn unlink && cd ../jotai && yarn unlink && cd ../.. && yarn unlink @pooltogether/hooks && yarn install --force",
+    "link-components": "cd node_modules/react && yarn link && cd ../react-dom && yarn link && cd ../jotai && yarn link && cd ../framer-motion && yarn link  && cd ../lodash && yarn link  && cd ../next && yarn link && cd ../tailwindcss && yarn link && cd ../@pooltogether/hooks && yarn link && cd .. && cd ../.. && yarn link @pooltogether/react-components",
+    "unlink-components": "cd node_modules/react && yarn unlink && cd ../react-dom && yarn unlink && cd ../jotai && yarn unlink && cd ../framer-motion  && yarn unlink && cd ../lodash  && yarn unlink && cd ../next  && yarn unlink && cd ../tailwindcss && yarn unlink && cd ../@pooltogether/hooks && yarn unlink && cd .. && cd ../.. && yarn unlink @pooltogether/react-components && yarn install --force",
+    "link-components-and-hooks": "cd node_modules/react && yarn link && cd ../react-dom && yarn link && cd ../jotai && yarn link && cd ../framer-motion && yarn link && cd ../lodash && yarn link && cd ../next && yarn link && cd ../tailwindcss && yarn link && cd ../.. && yarn link @pooltogether/react-components && yarn link @pooltogether/hooks",
+    "unlink-components-and-hooks": "cd node_modules/react && yarn unlink && cd ../react-dom && yarn unlink && cd ../jotai && yarn unlink && cd ../framer-motion  && yarn unlink && cd ../lodash  && yarn unlink && cd ../next  && yarn unlink && && cd ../tailwindcss && yarn unlink && cd ../.. && yarn unlink @pooltogether/react-components && yarn unlink @pooltogether/hooks && yarn install --force"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -52,10 +58,10 @@
     "@pooltogether/bnc-onboard": "1.25.0-b",
     "@pooltogether/current-pool-data": "3.4.18",
     "@pooltogether/etherplex": "^1.0.2",
-    "@pooltogether/hooks": "^0.0.15",
+    "@pooltogether/hooks": "^0.0.33",
     "@pooltogether/loot-box": "1.0.0",
     "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
-    "@pooltogether/pooltogether-react-tailwind-ui": "^0.0.1",
+    "@pooltogether/react-components": "^0.0.1",
     "@pooltogether/utilities": "0.0.15",
     "@reach/dialog": "^0.10.5",
     "@reach/menu-button": "^0.10.5",
@@ -73,10 +79,10 @@
     "date-fns-tz": "^1.0.12",
     "email-validator": "^2.0.4",
     "eth-revert-reason": "^1.0.3",
-    "ethers": "^5.1.0",
+    "ethers": "^5.3.0",
     "fathom-client": "^3.0.0",
     "feather-icons-react": "^0.4.1",
-    "framer-motion": "2.7.5",
+    "framer-motion": "3.7.0",
     "graphql": "^15.3.0",
     "graphql-request": "^3.3.0",
     "graphql-tag": "^2.11.0",
@@ -89,7 +95,7 @@
     "js-cookie": "^2.2.1",
     "luxon": "^1.25.0",
     "netlify-lambda": "1.6.3",
-    "next": "10.1.3",
+    "next": "^10.1.1",
     "next-images": "^1.4.1",
     "postcss-easy-import": "^3.0.0",
     "query-string": "^6.13.1",
@@ -104,7 +110,7 @@
     "react-jazzicon": "^0.1.3",
     "react-loader-spinner": "^4.0.0",
     "react-markdown": "^5.0.3",
-    "react-query": "^2.25.2",
+    "react-query": "^3.16.0",
     "react-query-devtools": "^2.6.1",
     "react-spinners": "^0.9.0",
     "react-table": "^7.5.0",
@@ -117,7 +123,7 @@
     "rollup": "2.17.1",
     "scheduler": "^0.20.1",
     "solidity-validator": "^0.5.2",
-    "tailwindcss": "^1.8.6",
+    "tailwindcss": "^1.7.6",
     "use-window-focus": "^1.1.1",
     "webpack": "4.44.1"
   }
