update package versions

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
     "watch": "yarn run test --watch",
-    "link-hooks": "cd node_modules/react && yarn link && cd ../react-query && yarn link && cd ../react-dom && yarn link && cd ../jotai && yarn link && cd ../.. && yarn link @pooltogether/hooks",
-    "unlink-hooks": "cd node_modules/react && yarn unlink && cd ../react-query && yarn unlink && cd ../react-dom && yarn unlink && cd ../jotai && yarn unlink && cd ../.. && yarn unlink @pooltogether/hooks && yarn install --force",
-    "link-components": "cd node_modules/react && yarn link && cd ../react-dom && yarn link && cd ../feather-icons-react && yarn link && cd ../jotai && yarn link && cd ../framer-motion && yarn link  && cd ../lodash && yarn link && cd ../tailwindcss && yarn link && cd ../eth-revert-reason && yarn link && cd ../@pooltogether && cd hooks && yarn link && cd ../utilities && yarn link && cd ../evm-chains-extended && yarn link && cd .. && cd ../.. && yarn link @pooltogether/react-components",
-    "unlink-components": "cd node_modules/react && yarn unlink && cd ../react-dom && yarn unlink && cd ../jotai && yarn unlink && cd ../feather-icons-react && yarn unlink && cd ../eth-revert-reason && yarn unlink && cd ../framer-motion  && yarn unlink && cd ../lodash  && yarn unlink && cd ../tailwindcss && yarn unlink && cd ../@pooltogether && cd hooks && yarn unlink && cd ../utilities && yarn unlink && cd ../evm-chains-extended && yarn unlink && cd .. && cd ../.. && yarn unlink @pooltogether/react-components && yarn install --force",
-    "link-components-and-hooks": "cd node_modules/react && yarn link && cd ../react-query && yarn link  && cd ../eth-revert-reason && yarn link && cd ../react-dom && yarn link && cd ../jotai && yarn link && cd ../feather-icons-react && yarn link && cd ../framer-motion && yarn link && cd ../lodash && yarn link && cd ../tailwindcss && yarn link && cd ../@pooltogether && cd utilities && yarn link && cd ../evm-chains-extended && yarn link  && cd .. cd ../.. && yarn link @pooltogether/react-components && yarn link @pooltogether/hooks",
-    "unlink-components-and-hooks": "cd node_modules/react && yarn unlink && cd ../react-query && yarn unlink  && cd ../eth-revert-reason && yarn unlink && cd ../react-dom && yarn unlink && cd ../jotai && yarn unlink && cd ../feather-icons-react && yarn unlink && cd ../framer-motion  && yarn unlink && cd ../lodash  && yarn unlink && cd ../tailwindcss && yarn unlink && cd ../@pooltogether && cd utilities && yarn unlink && cd ../evm-chains-extended && yarn unlink && cd .. && cd ../.. && yarn unlink @pooltogether/react-components && yarn unlink @pooltogether/hooks && yarn install --force"
+    "link-hooks": "./scripts/link-hooks.sh",
+    "unlink-hooks": "./scripts/unlink-hooks.sh",
+    "link-components": "./scripts/link-components.sh",
+    "unlink-components": "./scripts/unlink-components.sh",
+    "link-components-and-hooks": "./scripts/link-components-and-hooks.sh",
+    "unlink-components-and-hooks": "./scripts/unlink-components-and-hooks.sh"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -57,12 +57,12 @@
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@pooltogether/bnc-onboard": "1.25.0-b",
     "@pooltogether/current-pool-data": "3.4.18",
-    "@pooltogether/etherplex": "^1.0.2",
-    "@pooltogether/hooks": "^0.0.33",
+    "@pooltogether/etherplex": "^1.1.1",
+    "@pooltogether/hooks": "^0.1.6",
     "@pooltogether/loot-box": "1.0.0",
     "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
-    "@pooltogether/react-components": "^0.0.3",
-    "@pooltogether/utilities": "0.0.22",
+    "@pooltogether/react-components": "^0.0.22",
+    "@pooltogether/utilities": "^0.0.26",
     "@reach/dialog": "^0.10.5",
     "@reach/menu-button": "^0.10.5",
     "@reach/tooltip": "^0.10.5",
@@ -82,7 +82,7 @@
     "ethers": "^5.3.0",
     "fathom-client": "^3.0.0",
     "feather-icons-react": "^0.4.1",
-    "framer-motion": "3.7.0",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.3.0",
     "graphql-request": "^3.3.0",
     "graphql-tag": "^2.11.0",
@@ -91,8 +91,9 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-locize-backend": "^4.1.2",
     "i18next-node-locize-backend": "^3.1.2",
-    "jotai": "^0.14.0",
+    "jotai": "^0.16.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "netlify-lambda": "1.6.3",
     "next": "^10.1.1",
@@ -123,7 +124,7 @@
     "rollup": "2.17.1",
     "scheduler": "^0.20.1",
     "solidity-validator": "^0.5.2",
-    "tailwindcss": "^1.7.6",
+    "tailwindcss": "^2.1.2",
     "use-window-focus": "^1.1.1",
     "webpack": "4.44.1"
   }
