--- a/package.json
+++ b/package.json
@@ -41,91 +41,91 @@
     "verbose": true
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^9.5.2",
-    "@testing-library/react-hooks": "^3.7.0",
-    "babel-jest": "^26.3.0",
+    "@next/bundle-analyzer": "^11.0.1",
+    "@testing-library/react-hooks": "^7.0.1",
+    "babel-jest": "^27.0.6",
     "colors": "^1.4.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
-    "jest": "^26.4.1",
-    "nock": "^13.0.5",
+    "jest": "^27.0.6",
+    "nock": "^13.1.1",
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "3box": "^1.21.0",
-    "@argent/smartwallet-utils": "^0.0.11",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@pooltogether/bnc-onboard": "1.25.0-b",
-    "@pooltogether/current-pool-data": "3.4.18",
+    "3box": "^1.19.1",
+    "@argent/smartwallet-utils": "^0.0.12",
+    "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@pooltogether/bnc-onboard": "1.25.0-c",
+    "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^0.1.6",
-    "@pooltogether/loot-box": "1.0.0",
-    "@pooltogether/pooltogether-contracts": "3.2.0-beta.2",
-    "@pooltogether/react-components": "^0.0.22",
-    "@pooltogether/utilities": "^0.0.26",
-    "@reach/dialog": "^0.10.5",
-    "@reach/menu-button": "^0.10.5",
-    "@reach/tooltip": "^0.10.5",
-    "@reach/visually-hidden": "^0.10.4",
-    "@sentry/cli": "^1.55.2",
-    "@sentry/react": "^5.28.0",
-    "@sentry/tracing": "^5.28.0",
+    "@pooltogether/hooks": "^0.1.8",
+    "@pooltogether/loot-box": "1.1.0",
+    "@pooltogether/pooltogether-contracts": "3.4.4",
+    "@pooltogether/react-components": "^0.1.18",
+    "@pooltogether/utilities": "^0.0.27",
+    "@reach/dialog": "^0.15.3",
+    "@reach/menu-button": "^0.15.3",
+    "@reach/tooltip": "^0.15.3",
+    "@reach/visually-hidden": "^0.15.2",
+    "@sentry/cli": "^1.67.2",
+    "@sentry/react": "^6.10.0",
+    "@sentry/tracing": "^6.10.0",
     "add": "^2.0.6",
-    "autoprefixer": "^9.8.6",
-    "beautiful-react-hooks": "^0.28.0",
-    "bn.js": "4.11.0",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.15.0",
-    "date-fns-tz": "^1.0.12",
+    "autoprefixer": "^10.3.1",
+    "beautiful-react-hooks": "^0.35.0",
+    "bn.js": "5.2.0",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.23.0",
+    "date-fns-tz": "^1.1.6",
     "email-validator": "^2.0.4",
     "eth-revert-reason": "^1.0.3",
-    "ethers": "^5.3.0",
-    "fathom-client": "^3.0.0",
-    "feather-icons-react": "^0.4.1",
+    "ethers": "^5.4.2",
+    "fathom-client": "^3.1.0",
+    "feather-icons-react": "^0.4.3",
     "framer-motion": "^4.1.17",
-    "graphql": "^15.3.0",
-    "graphql-request": "^3.3.0",
-    "graphql-tag": "^2.11.0",
-    "http-proxy-middleware": "^1.0.5",
-    "i18next": "^19.7.0",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-locize-backend": "^4.1.2",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
+    "graphql-tag": "^2.12.5",
+    "http-proxy-middleware": "^2.0.1",
+    "i18next": "^20.3.5",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-locize-backend": "^4.2.3",
     "i18next-node-locize-backend": "^3.1.2",
-    "jotai": "^0.16.0",
-    "js-cookie": "^2.2.1",
+    "jotai": "^1.2.2",
+    "js-cookie": "^3.0.0",
     "lodash": "^4.17.20",
-    "luxon": "^1.25.0",
-    "netlify-lambda": "1.6.3",
-    "next": "^10.1.1",
-    "next-images": "^1.4.1",
+    "luxon": "^2.0.1",
+    "netlify-lambda": "2.0.12",
+    "next": "^11.0.1",
+    "next-images": "^1.8.1",
     "postcss-easy-import": "^3.0.0",
-    "query-string": "^6.13.1",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
-    "react-content-loader": "^5.1.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-countup": "^4.3.3",
-    "react-device-detect": "^1.13.1",
+    "react-content-loader": "^6.0.3",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-countup": "^5.1.0",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "6.15.1",
-    "react-i18next": "11.7.0",
+    "react-hook-form": "7.12.1",
+    "react-i18next": "11.11.4",
     "react-jazzicon": "^0.1.3",
     "react-loader-spinner": "^4.0.0",
-    "react-markdown": "^5.0.3",
-    "react-query": "^3.16.0",
-    "react-query-devtools": "^2.6.1",
-    "react-spinners": "^0.9.0",
+    "react-markdown": "^6.0.2",
+    "react-query": "^3.19.1",
+    "react-query-devtools": "^2.6.3",
+    "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
-    "react-test-renderer": "16.13.1",
-    "react-toastify": "^6.0.8",
-    "react-tooltip": "^4.2.19",
-    "react-wizard-primitive": "^2.4.0",
+    "react-test-renderer": "17.0.2",
+    "react-toastify": "^7.0.4",
+    "react-tooltip": "^4.2.21",
+    "react-wizard-primitive": "^2.5.0",
     "remark-gfm": "^1.0.0",
     "request": "2.88.2",
-    "rollup": "2.17.1",
-    "scheduler": "^0.20.1",
+    "rollup": "2.55.0",
+    "scheduler": "^0.20.2",
     "solidity-validator": "^0.5.2",
-    "tailwindcss": "^2.1.2",
-    "use-window-focus": "^1.1.1",
-    "webpack": "4.44.1"
+    "tailwindcss": "^2.2.7",
+    "use-window-focus": "^1.3.0",
+    "webpack": "5.47.0"
   }
 }
