--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "lodash": "^4.17.20",
     "luxon": "^2.0.1",
     "netlify-lambda": "2.0.12",
-    "next": "^11.0.1",
+    "next": "^10.2.3",
     "next-images": "^1.8.1",
     "postcss-easy-import": "^3.0.0",
     "query-string": "^7.0.1",
@@ -107,6 +107,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "7.12.1",
     "react-i18next": "11.11.4",
+    "react-jazzicon": "^0.1.3",
     "react-loader-spinner": "^4.0.0",
     "react-markdown": "^6.0.2",
     "react-query": "^3.19.1",
