--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "react-countup": "^5.1.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "7.12.1",
+    "react-hook-form": "^6.15.8",
     "react-i18next": "11.11.4",
     "react-jazzicon": "^0.1.3",
     "react-loader-spinner": "^4.0.0",
