* get packages up to date properly

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist": "yarn build && netlify-lambda build functions",
     "export": "next export",
     "postexport": "node post-export.js",
-    "distrelease": "yarn test && yarn dist",
+    "distrelease": "yarn dist",
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
@@ -58,11 +58,11 @@
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^0.1.8",
+    "@pooltogether/hooks": "^0.1.16",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^0.1.18",
-    "@pooltogether/utilities": "^0.0.27",
+    "@pooltogether/react-components": "^0.2.2",
+    "@pooltogether/utilities": "^0.0.34",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
