--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,5 +4,5 @@
     "jsx": "react",
     "checkJs": true
   },
-  "exclude": ["out", "functions-out", "node_modules"]
+  "exclude": ["out", "functions-out", "node_modules", ".yalc"]
 }
