--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^0.1.16",
+    "@pooltogether/hooks": "^0.1.17",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^0.2.2",
-    "@pooltogether/utilities": "^0.0.34",
+    "@pooltogether/react-components": "^0.2.5",
+    "@pooltogether/utilities": "^0.0.35",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
@@ -94,6 +94,7 @@
     "jotai": "^1.2.2",
     "js-cookie": "^3.0.0",
     "lodash": "^4.17.20",
+    "lodash.clonedeep": "^4.5.0",
     "luxon": "^2.0.1",
     "netlify-lambda": "2.0.12",
     "next": "^10.2.3",
