--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^0.1.18",
+    "@pooltogether/hooks": "^0.2.0",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^0.2.8",
-    "@pooltogether/utilities": "^0.0.37",
+    "@pooltogether/utilities": "^0.0.42",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
@@ -99,6 +99,7 @@
     "netlify-lambda": "2.0.12",
     "next": "^10.2.3",
     "next-images": "^1.8.1",
+    "ordinal": "^1.0.3",
     "postcss-easy-import": "^3.0.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
