--- a/package.json
+++ b/package.json
@@ -17,13 +17,7 @@
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
-    "watch": "yarn run test --watch",
-    "link-hooks": "./scripts/link-hooks.sh",
-    "unlink-hooks": "./scripts/unlink-hooks.sh",
-    "link-components": "./scripts/link-components.sh",
-    "unlink-components": "./scripts/unlink-components.sh",
-    "link-components-and-hooks": "./scripts/link-components-and-hooks.sh",
-    "unlink-components-and-hooks": "./scripts/unlink-components-and-hooks.sh"
+    "watch": "yarn run test --watch"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -43,13 +37,16 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^11.0.1",
     "@testing-library/react-hooks": "^7.0.1",
+    "@types/node": "^16.7.2",
+    "@types/react": "^17.0.19",
     "babel-jest": "^27.0.6",
     "colors": "^1.4.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "jest": "^27.0.6",
     "nock": "^13.1.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@argent/smartwallet-utils": "^0.0.12",
@@ -58,11 +55,11 @@
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^0.2.0",
+    "@pooltogether/hooks": "^0.2.4",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^0.2.8",
-    "@pooltogether/utilities": "^0.0.42",
+    "@pooltogether/react-components": "^0.2.26",
+    "@pooltogether/utilities": "^0.0.43",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
