--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@download/blockies": "^1.0.3",
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
+    "@pooltogether/draw-calculator-js": "^1.0.0-beta.16",
     "@pooltogether/etherplex": "^1.1.1",
     "@pooltogether/hooks": "^0.2.4",
     "@pooltogether/loot-box": "1.1.0",
