adding lambda fn. Rename claimable draw to draw prize.

--- a/package.json
+++ b/package.json
@@ -52,15 +52,17 @@
     "@argent/smartwallet-utils": "^0.0.12",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@download/blockies": "^1.0.3",
+    "@netlify/functions": "^0.7.2",
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
-    "@pooltogether/draw-calculator-js": "^1.0.0-beta.16",
+    "@pooltogether/draw-calculator-js": "^1.0.0-beta.17",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^0.2.4",
+    "@pooltogether/hooks": "file:.yalc/@pooltogether/hooks",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^0.2.26",
+    "@pooltogether/react-components": "file:.yalc/@pooltogether/react-components",
     "@pooltogether/utilities": "^0.0.43",
+    "@pooltogether/v4-pool-data": "file:.yalc/@pooltogether/v4-pool-data",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
@@ -73,6 +75,7 @@
     "beautiful-react-hooks": "^0.35.0",
     "bn.js": "5.2.0",
     "classnames": "^2.3.1",
+    "cross-fetch": "^3.1.4",
     "date-fns": "^2.23.0",
     "date-fns-tz": "^1.1.6",
     "email-validator": "^2.0.4",
@@ -97,6 +100,7 @@
     "netlify-lambda": "2.0.12",
     "next": "^10.2.3",
     "next-images": "^1.8.1",
+    "node-fetch": "^3.0.0",
     "ordinal": "^1.0.3",
     "postcss-easy-import": "^3.0.0",
     "query-string": "^7.0.1",
