--- a/.envrc.example
+++ b/.envrc.example
@@ -30,3 +30,8 @@ export NEXT_JS_LOCIZE_DEV_API_KEY=
 export NEXT_JS_LOCIZE_PROJECT_ID=
 export NEXT_JS_LOCIZE_VERSION=
 export NEXT_JS_FATHOM_SITE_ID=
+
+# CloudFlare KV - Used by lambda functions
+export NEXT_JS_CLOUDFLARE_ACCOUNT_IDENTIFIER=
+export NEXT_JS_CLOUDFLARE_NAMESPACE_IDENTIFIER=
+export NEXT_JS_CLOUDFLARE_BEARER_TOKEN=
