--- a/package.json
+++ b/package.json
@@ -55,14 +55,15 @@
     "@netlify/functions": "^0.7.2",
     "@pooltogether/bnc-onboard": "1.25.0-c",
     "@pooltogether/current-pool-data": "3.5.14",
-    "@pooltogether/draw-calculator-js": "file:.yalc/@pooltogether/draw-calculator-js",
+    "@pooltogether/draw-calculator-js": "^1.0.0-beta.22",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "file:.yalc/@pooltogether/hooks",
+    "@pooltogether/hooks": "^1.0.2",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "file:.yalc/@pooltogether/react-components",
+    "@pooltogether/react-components": "^1.0.3",
     "@pooltogether/utilities": "^0.0.43",
-    "@pooltogether/v4-pool-data": "file:.yalc/@pooltogether/v4-pool-data",
+    "@pooltogether/v4-js-client": "^0.1.1",
+    "@pooltogether/v4-pool-data": "^0.1.0",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
