--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@download/blockies": "^1.0.3",
     "@netlify/functions": "^0.7.2",
-    "@pooltogether/bnc-onboard": "1.25.0-c",
+    "@pooltogether/bnc-onboard": "1.34.1-f",
+    "@pooltogether/bnc-onboard-hooks": "^1.0.1",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/draw-calculator-js": "^1.0.0-beta.22",
     "@pooltogether/etherplex": "^1.1.1",
