--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@pooltogether/bnc-onboard": "1.34.1-f",
     "@pooltogether/bnc-onboard-hooks": "^1.0.1",
     "@pooltogether/current-pool-data": "3.5.14",
+    "@pooltogether/draw-calculator-js": "^1.0.0-beta.25",
     "@pooltogether/etherplex": "^1.1.1",
     "@pooltogether/hooks": "^1.0.2",
     "@pooltogether/loot-box": "1.1.0",
