adding a carousel for prizes

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@pooltogether/hooks": "^1.1.4",
     "@pooltogether/loot-box": "1.1.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.1.9",
+    "@pooltogether/react-components": "^1.1.10",
     "@pooltogether/utilities": "^0.1.5",
     "@pooltogether/v4-js-client": "^0.1.3",
     "@pooltogether/v4-pool-data": "^0.1.0",
@@ -119,7 +119,7 @@
     "react-markdown": "^6.0.2",
     "react-query": "^3.19.1",
     "react-query-devtools": "^2.6.3",
-    "react-slick": "^0.28.1",
+    "react-responsive-carousel": "^3.2.21",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "react-test-renderer": "17.0.2",
@@ -130,7 +130,6 @@
     "request": "2.88.2",
     "rollup": "2.55.0",
     "scheduler": "^0.20.2",
-    "slick-carousel": "^1.8.1",
     "solidity-validator": "^0.5.2",
     "tailwindcss": "^2.2.7",
     "use-window-focus": "^1.3.0",
