--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dist": "yarn build && netlify-lambda build functions",
     "export": "next export",
     "postexport": "node post-export.js",
-    "distrelease": "NODE_OPTIONS=\"--max_old_space_size=16384\" yarn dist",
+    "release": "./scripts/sentry-release.sh",
+    "distrelease": "NODE_OPTIONS=\"--max_old_space_size=16384\" yarn sentry && yarn dist && yarn release",
+    "sentry": "export NEXT_JS_RELEASE_VERSION=$SENTRY_PROJECT:$(sentry-cli releases propose-version)",
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
@@ -68,9 +70,9 @@
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
     "@reach/visually-hidden": "^0.15.2",
-    "@sentry/cli": "^1.67.2",
-    "@sentry/react": "^6.10.0",
-    "@sentry/tracing": "^6.10.0",
+    "@sentry/cli": "^1.69.1",
+    "@sentry/react": "^6.13.3",
+    "@sentry/tracing": "^6.13.3",
     "add": "^2.0.6",
     "autoprefixer": "^10.3.1",
     "beautiful-react-hooks": "^0.35.0",
