--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "start:app": "PORT=3000 node --max-old-space-size=8192 server.js",
     "start:server": "netlify-lambda serve functions",
     "postinstall": "netlify-lambda install",
-    "build": "next build && next export && yarn postexport",
+    "build": "NODE_OPTIONS=\"--max_old_space_size=16384\" next build && next export && yarn postexport",
     "dist": "yarn build && netlify-lambda build functions",
     "export": "next export",
     "postexport": "node post-export.js",
     "release": "./scripts/sentry-release.sh",
-    "distrelease": "NODE_OPTIONS=\"--max_old_space_size=16384\" yarn sentry && yarn dist && yarn release",
+    "distrelease": "yarn sentry && yarn dist && yarn release",
     "sentry": "export NEXT_JS_RELEASE_VERSION=$SENTRY_PROJECT:$(sentry-cli releases propose-version)",
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
