--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "dist": "yarn build && netlify-lambda build functions",
     "export": "next export",
     "postexport": "node post-export.js",
-    "release": "./scripts/sentry-release.sh",
-    "distrelease": "yarn sentry && yarn dist && yarn release",
-    "sentry": "export NEXT_JS_RELEASE_VERSION=$SENTRY_PROJECT:$(sentry-cli releases propose-version)",
+    "distrelease": "yarn dist",
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
