--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@download/blockies": "^1.0.3",
     "@netlify/functions": "^0.7.2",
-    "@pooltogether/bnc-onboard": "1.34.1-f",
-    "@pooltogether/bnc-onboard-hooks": "^1.0.1",
+    "@pooltogether/bnc-onboard": "1.34.1-i",
+    "@pooltogether/bnc-onboard-hooks": "^1.0.2",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/draw-calculator-js": "^1.0.0-beta.27",
     "@pooltogether/etherplex": "^1.1.1",
-    "@pooltogether/hooks": "^1.1.9",
+    "@pooltogether/hooks": "^1.1.10",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.1.28",
+    "@pooltogether/react-components": "^1.1.29",
     "@pooltogether/utilities": "^0.1.5",
     "@pooltogether/v4-js-client": "^0.3.0",
     "@pooltogether/v4-pool-data": "^0.7.0",
