--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "author": "PoolTogether Inc.",
   "scripts": {
     "reinstall": "rm -rf .next out ./node_modules && yarn cache clean && yarn",
-    "dev": "npm-run-all --parallel start:app start:server",
+    "dev": "npm-run-all --parallel start:app",
     "start:app": "PORT=3000 node --max-old-space-size=8192 server.js",
-    "start:server": "netlify-lambda serve functions",
     "postinstall": "netlify-lambda install",
     "build": "NODE_OPTIONS=\"--max_old_space_size=16384\" next build && next export && yarn postexport",
-    "dist": "yarn build && netlify-lambda build functions",
+    "dist": "yarn build",
     "export": "next export",
     "postexport": "node post-export.js",
     "distrelease": "yarn dist",
@@ -52,7 +51,6 @@
     "@argent/smartwallet-utils": "^0.0.12",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@download/blockies": "^1.0.3",
-    "@netlify/functions": "^0.7.2",
     "@pooltogether/bnc-onboard": "1.34.1-i",
     "@pooltogether/bnc-onboard-hooks": "^1.0.2",
     "@pooltogether/current-pool-data": "3.5.14",
@@ -62,7 +60,7 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.2.7",
     "@pooltogether/utilities": "^0.1.5",
-    "@pooltogether/v4-js-client": "^0.5.3",
+    "@pooltogether/v4-js-client": "file:.yalc/@pooltogether/v4-js-client",
     "@pooltogether/v4-pool-data": "^1.0.0",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
