--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.2.7",
     "@pooltogether/utilities": "^0.2.1",
-    "@pooltogether/v4-js-client": "file:.yalc/@pooltogether/v4-js-client",
+    "@pooltogether/v4-js-client": "^0.5.3",
     "@pooltogether/v4-pool-data": "^1.0.0",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
