--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "@pooltogether/bnc-onboard": "1.34.1-i",
     "@pooltogether/bnc-onboard-hooks": "^1.0.4",
     "@pooltogether/current-pool-data": "3.5.14",
-    "@pooltogether/draw-calculator-js": "^1.0.2",
+    "@pooltogether/draw-calculator-js": "^1.0.3-beta.1",
     "@pooltogether/etherplex": "^1.1.1",
     "@pooltogether/hooks": "^1.3.2",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.4.1",
     "@pooltogether/utilities": "^0.2.1",
-    "@pooltogether/v4-js-client": "^0.8.1",
+    "@pooltogether/v4-js-client": "^0.8.2",
     "@pooltogether/v4-pool-data": "^1.1.0",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
