--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@pooltogether/hooks": "^1.4.2",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.5.0",
-    "@pooltogether/utilities": "^0.3.4",
+    "@pooltogether/utilities": "^0.3.5",
     "@pooltogether/v4-js-client": "^0.9.2",
     "@pooltogether/v4-pool-data": "^1.1.0",
     "@reach/dialog": "^0.15.3",
@@ -70,7 +70,7 @@
     "@sentry/tracing": "^6.13.3",
     "add": "^2.0.6",
     "autoprefixer": "^10.3.1",
-    "beautiful-react-hooks": "^0.35.0",
+    "beautiful-react-hooks": "^1.0.2",
     "bn.js": "5.2.0",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
@@ -100,6 +100,7 @@
     "next-images": "^1.8.1",
     "node-fetch": "^3.0.0",
     "ordinal": "^1.0.3",
+    "postcss-custom-properties-fallback": "^1.0.1",
     "postcss-easy-import": "^3.0.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
@@ -117,6 +118,7 @@
     "react-query-devtools": "^2.6.3",
     "react-responsive-carousel": "^3.2.21",
     "react-spinners": "^0.11.0",
+    "react-spring-bottom-sheet": "^3.4.0",
     "react-table": "^7.7.0",
     "react-test-renderer": "17.0.2",
     "react-toastify": "^7.0.4",
@@ -126,7 +128,7 @@
     "rollup": "2.55.0",
     "scheduler": "^0.20.2",
     "solidity-validator": "^0.5.2",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^2.2.19",
     "use-window-focus": "^1.3.0",
     "webpack": "5.47.0"
   }
