--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.6.0",
     "@pooltogether/utilities": "^0.3.5",
-    "@pooltogether/v4-js-client": "^0.9.4",
+    "@pooltogether/v4-js-client": "^0.9.5",
     "@pooltogether/v4-pool-data": "^1.1.0",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
@@ -117,6 +117,7 @@
     "react-query": "^3.34.0",
     "react-query-devtools": "^2.6.3",
     "react-responsive-carousel": "^3.2.21",
+    "react-rewards": "^1.1.2",
     "react-spinners": "^0.11.0",
     "react-spring-bottom-sheet": "^3.4.0",
     "react-table": "^7.7.0",
