fix: better naming

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,7 +49,7 @@ jobs:
         id: upload
         uses: anantaramdas/ipfs-pinata-deploy-action@39bbda1ce1fe24c69c6f57861b8038278d53688d
         with:
-          pin-name: PoolTogether ${{ needs.bump_version.outputs.new_tag }}
+          pin-name: 'pooltogether/v4-ui, ${{ needs.bump_version.outputs.new_tag }}'
           path: './out'
           pinata-api-key: ${{ secrets.PINATA_API_KEY }}
           pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
