Add sentry releases with source maps

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "reinstall": "rm -rf .next out ./node_modules && yarn cache clean && yarn",
     "dev": "npm-run-all --parallel start:app",
     "start:app": "PORT=3000 node --max-old-space-size=8192 server.js",
-    "build": "NODE_OPTIONS=\"--max_old_space_size=16384\" next build && next export && yarn postexport",
+    "build": "next build && next export && yarn postexport",
+    "postexport": "node post-export.js",
     "dist": "yarn build",
     "export": "next export",
-    "postexport": "node post-export.js",
-    "distrelease": "yarn dist",
+    "distrelease": "yarn dist && yarn sentryrelease",
+    "sentryrelease": "export NEXT_JS_RELEASE_VERSION=$SENTRY_PROJECT:$(sentry-cli releases propose-version) && ./scripts/sentry-release.sh",
     "start": "NODE_ENV=production PORT=80 node server.js",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
